Adds icon + Improves folder structure

--- a/Render/M1/S1/SLO1.html
+++ b/Render/M1/S1/SLO1.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>JavaScript</title>
+    <title>M1-S1-SLO1</title>
 
     <link rel="stylesheet" href="../../../css/reveal.css" />
     <link rel="stylesheet" href="../../../css/Custom.css" />
