--- a/Render/M1/S1/SLO2.html
+++ b/Render/M1/S1/SLO2.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>JavaScript</title>
+    <title>M1-S1-SLO2</title>
 
     <link rel="stylesheet" href="../../../css/reveal.css" />
     <link rel="stylesheet" href="../../../css/Custom.css" />
@@ -26,6 +26,7 @@
           data-separator-notes="^Note:"
           data-charset="iso-8859-15"
         ></section>
+        
       </div>
     </div>
 
